--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is a website that</p>
+    <p>this is a website that makes student happy</p>
 </body>
 </html>
