all develop work

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>this is a website that makes student happy</p>
+    <p>this is a website that makes student happy</p>
 </body>
 </html>
